--- a/arboreal.css
+++ b/arboreal.css
@@ -1,7 +1,12 @@
 body{
-  font-family: 'Open Sans', sans-serif;
+  /*font-family: 'Open Sans', sans-serif;*/
+  font-family: 'Barlow', sans-serif;
   background-color:  white;
+  font-size: 20px;
+  line-height: 2;
+  margin: 0;
 }
+
 .wrap{
   padding: 5em;
 }
@@ -17,13 +22,14 @@ body{
 }
 
 /*gör så nav baren blir på rad och inte i kolumn. */
-nav ul li{
-  width: 150px;
-  display: inline-block;
-}
-
 /*Ta bort alla dottar vid listor i navbar och pricing del*/
-li{
+
+nav ul{
+  padding: 0;
+}
+nav ul li{
+  width: 8em;
+  display: inline-block;
   list-style-type: none;
 }
 
@@ -40,8 +46,8 @@ a:hover {
 
 /*så att hela bakgrundbilden är med i headern. column placerar loggan över slogan*/
   header{
-  height: 700px;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   background-size: 100% 100%;
   background-image: url(sun.jpg);
   display: flex;
@@ -50,6 +56,10 @@ a:hover {
   flex-flow: column;
  }
 
+header img{
+  height: 10em;
+  width: 10em;
+}
 header h1{
   text-shadow: 0px 0px 10px white;
 }
@@ -65,8 +75,7 @@ h2{
 /*border style på alla avsnitt som finns med i navbaren*/
 .about{
   display: flex;
-  height: 15em;
-  padding: 0em 5em;
+  padding: 5em 5em;
   align-items: center;
   text-align: center;
   border-style: inset;
@@ -76,11 +85,16 @@ h2{
 .newpricing{
   display: flex;
   border-style: inset;
+  padding: 5em;
+  flex-wrap: wrap;
 }
 /*tre små divarna i newpricing*/
 .prices{
-  width: 30%;
-  flex-wrap: wrap;
+flex: 1;
+}
+
+.prices h2{
+  justify-content: flex-start;
 }
 /*stora diven i themes med tre mindre divar med alla teman*/
 .themes{
@@ -93,9 +107,8 @@ h2{
 
 .divthemes{
   padding-top: 3em;
-  width: 20em;
-  margin-left: 3em;
-  margin-right: 3em;
+  flex: 1;
+  margin: 3em 3em;
 }
 
 .themes h2{
@@ -109,19 +122,16 @@ h2{
 
 footer{
   background-color:  #b1cb9b;
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
 }
-
 
 .wrapper{
   display: flex;
+  flex-wrap: wrap;
 }
 
 .contact{
   flex:1;
   width: 100%;
-  height: 500px;
   flex-flow: column;
   padding: 2em 10em;
 }
@@ -138,4 +148,101 @@ footer{
 .social{
 display: flex;
 justify-content: space-around;
+max-width: 200px;
+margin: 0 auto;
 }
+
+.social img{
+  height: 2em;
+  width: 2em;
+}
+
+/* för responsiv iPad*/
+@media (max-width: 854px){
+  body{
+    padding:0;
+    font-size: 16px;
+  }
+
+  header h1{
+    font-size: 24px;
+  }
+
+  .navbar a{
+    font-size: 16px;
+  }
+
+  .about{
+    padding: 1em 1em;
+  }
+
+  .newpricing{
+    padding: 2em;
+    display: block;
+  }
+
+  .pricing{
+    padding: 1em 1em;
+  }
+
+  .themes{
+    display: block;
+  }
+
+  .divthemes{
+    padding: 0em 1em;
+  }
+
+}
+
+@media (max-width: 670px){
+    body{
+      padding: 0;
+    }
+
+    .navbar{
+      position: absolute;
+      }
+
+    nav ul li{
+  display: block;
+  text-align: center;
+    }
+
+    header h1{
+      font-size: 20px;
+    }
+
+    header{
+      text-align: center;
+      padding: 1em;
+      width: auto;
+    }
+
+    header img{
+      height: 7em;
+      width: 7em;
+    }
+
+    .wrap{
+      padding: 1em;
+    }
+
+    .pricing{
+      padding: 0em;
+    }
+
+    .divthemes{
+      padding: 0em;
+    }
+
+    .contact{
+      padding: 1em;
+    }
+
+    .contact input{
+      width: 100%;
+    }
+
+
+  }
